# niuss

./: .dockerignore  .env.example  .gitignore  BUILD_FIX.md  Cargo.toml  DEPLOYMENT.md  Makefile  ONE_CLICK_DEPLOYMENT_SUMMARY.md  QUICKSTART.md  QUICK_UPDATE.txt  README.md  UPDATE.md  UPDATE_CLASH.md  UPDATE_GUIDE.md  docker-compose.yml  template.yaml  template_simple.yaml
.kiro/specs/clash-access-logs/: design.md  requirements.md  tasks.md
.kiro/specs/node-one-click-deployment/: design.md  requirements.md  tasks.md
.kiro/specs/node-proxy-unification/: design.md  requirements.md  tasks.md
.kiro/specs/vpn-subscription-platform/: design.md  requirements.md  tasks.md
admin/: Dockerfile  README.md  index.html  package-lock.json  package.json
admin/src/: App.vue
admin/src/api/: index.ts
admin/src/router/: index.ts
admin/src/stores/: accessLogs.test.ts  accessLogs.ts  auth.ts  dashboard.ts  index.ts  nodes.ts  orders.ts  stats.ts  users.ts
admin/src/views/: AccessLogs.test.ts  AccessLogs.vue  ClashConfig.test.ts  ClashConfig.vue  Dashboard.vue  Home.vue  Layout.vue  Login.vue  Nodes.test.ts  Nodes.vue  Orders.vue  Stats.vue  Users.vue
api/: Cargo.toml  Dockerfile
api/src/: cache.rs  clash.rs  config.rs  db.rs  db_tests.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  traffic.rs  utils.rs
docs/: CLASH_CONFIG_MANAGEMENT.md  CLASH_CONFIG_QUICKSTART.md  CLASH_CONFIG_SUMMARY.md  FEATURES_CLASH_CONFIG.md  ONE_CLICK_DEPLOYMENT.md
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  index.ts  order.ts  package.ts  referral.ts  subscription.ts  user.ts
frontend/src/types/: index.ts
frontend/src/views/: Dashboard.vue  Home.vue  (+8 more)
migrations/: 001_init.sql  002_seed_test_data.sql  003_clash_config_management.sql  004_clash_access_logs.sql  004_clash_access_logs_rollback.sql  005_node_proxy_unification.sql  005_node_proxy_unification_rollback.sql  README.md  README_NODE_PROXY_UNIFICATION.md  init.sql
node-agent/: Cargo.toml  Dockerfile
node-agent/proptest-regressions/: config.txt
node-agent/src/: config.rs  health.rs  lib.rs  main.rs  sync.rs  traffic.rs  users.rs
scripts/: CHANGELOG.md  MIGRATION_GUIDE.md  README.md  REORGANIZATION_PLAN.md  db_manage.sh  deploy_node.sh  deploy_platform.sh  install_node.sh  node.sh  platform.sh  quick_deploy_node.sh  quick_update.sh  test_deployment.sh  test_functions.sh  uninstall_node.sh  update_admin_password.sh  update_clash.sh  update_clash_feature.sh  update_clash_feature_simple.sh
