[package]
name = "node-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "node-agent"
path = "src/main.rs"

[lib]
name = "node_agent"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
redis.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenv.workspace = true

# Additional dependencies
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
futures-util = "0.3"

[dev-dependencies]
proptest.workspace = true
